# xserver-xboat

./: meson.build  meson_options.txt
hw/: meson.build
hw/kdrive/: meson.build
hw/kdrive/xboat/: hostboat.c  hostboat.h  meson.build  xboat.c  xboat.h  xboat_draw.c  xboat_glamor_egl.c  xboat_glamor_egl.h  xboat_glamor_xv.c  xboatinit.c  xboatlog.h
include/: meson.build  xkbsrv.h
os/: utils.c
xkb/: ddxLoad.c  xkbInit.c
